--- a/RefactoriiCodemirrorBase64.html
+++ b/RefactoriiCodemirrorBase64.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
-    <title>Refactorii Codemirror GraphQL Introduction</title>
+    <title>Refactorii Codemirror Base64</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.63.1/lib/codemirror.css">
     <link href="https://wbsckt3.github.io/codemirror-styles/styles.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.63.1/lib/codemirror.js"></script>
